First commit of GoodUSB
Non-working checkpoint of in-progress work.

* Direct passthourgh keyboard input [IMPLEMENTED]
* TODO: HID Mouse support for move and click
* TODO: SSL support for HTTP and Websocket
* TODO: Direct input mode (connect keyboard and mouse to USB-C)

--- a/web/style.css
+++ b/web/style.css
@@ -455,8 +455,11 @@ input, button {
 	border-radius: 4px;
 	background: #2f3136;
 	letter-spacing: .1rem;
-	text-transform: uppercase;
 	margin: 2px 0;
+}
+
+button {
+	text-transform: uppercase;
 }
 
 input:hover, button:hover {
